charts/backstage-app/backstage-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backstage-rollout
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: backstage-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: backstage-rollout
    spec:
      containers:
        - name: backstage-rollout
          image: backstage-app:v1
          # image: backstage-franci:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
  strategy:
    canary:
      canaryService: backstage-rollout-canary
      stableService: backstage-rollout-stable
      # analysis will be performed in background, while rollout is progressing through its steps
      analysis:
        startingStep: 1 # index of step list, of when to start this analysis
        templates:
          - templateName: cpu-success-rate
      trafficRouting:
        istio:
          virtualService:
            name: backstage-rollout-vsvc
            routes:
              - primary
      steps:
        - setWeight: 10
        - pause: {}
        # - pause: { duration: 20s }
        - setWeight: 20
        - pause: { duration: 20s }
        - setWeight: 30
        - pause: { duration: 20s }
        - setWeight: 40
        - pause: { duration: 20s }
        - setWeight: 50
        - pause: { duration: 20s }
        - setWeight: 60
        - pause: { duration: 20s }
        - setWeight: 70
        - pause: { duration: 20s }
        - setWeight: 80
        - pause: { duration: 20s }
        - setWeight: 90
        - pause: { duration: 20s }
