charts/backstage-app/backstage-service.yaml
# kubernetes/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: my-app
  labels:
    app: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-rollout-canary
  namespace: my-app
  labels:
    app: backstage
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: backstage-rollout

---
apiVersion: v1
kind: Service
metadata:
  name: backstage-rollout-stable
  namespace: my-app
  labels:
    app: backstage
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: backstage-rollout
